--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700;900&display=swap');
+
 * {
   margin: 0;
   padding: 0;
@@ -5,6 +7,8 @@
 }
 
 body {
+  font-family: 'Roboto', sans-serif;
   background-color: #202020;
   font-size: 16px;
+  color: #fff;
 }
