--- a/src/components/RecipeItem/RecipeItem.module.css
+++ b/src/components/RecipeItem/RecipeItem.module.css
@@ -1,4 +1,8 @@
 .item {
+    width: 500px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     background-color: #363636;
     border-radius: 12px;
     margin-bottom: 12px;
@@ -7,4 +11,13 @@
 
 .title {
     margin-bottom: 8px;
+}
+
+.img {
+    display: block;
+    width: 300px;
+    height: 300px;
+    object-fit: cover;
+    border-radius: 8px;
+    margin-bottom: 12px;
 }
